Rewrite README with comprehensive Vietnamese docs
Replace English README with extensive Vietnamese documentation covering architecture, setup, API standards, environment configuration, troubleshooting and contribution guidelines. Includes tech stack, deployment flows, WebSocket patterns, database migrations and testing requirements.